--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
     "debug": "~2.2.0",
     "ejs": "~2.5.2",
     "express": "~4.14.0",
+    "mongoose": "^4.8.1",
     "morgan": "~1.7.0",
     "serve-favicon": "~2.3.0"
   },
   "engines": {
     "node": ">=6.0.0",
-    "npm" : ">=3.5.0"
+    "npm": ">=3.5.0"
   },
   "main": "server.js",
   "devDependencies": {},
